[gd_scene load_steps=4 format=4 uid="uid://dgpnwl2ophh12"]

[ext_resource type="Script" uid="uid://b2aa4pyo47cyv" path="res://scenes/connector.gd" id="1"]
[ext_resource type="Script" uid="uid://cn5hlgc3rxey8" path="res://scripts/primitive_texture_rect.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dmme5lnlcky7q" path="res://textures/icons/circle.png" id="3"]

[node name="Connector" type="Node2D" groups=["connector"]]
script = ExtResource("1")

[node name="Glow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")
texture = ExtResource("3")

[node name="Pivot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
script = ExtResource("2")
texture_scale = 0.48
texture = ExtResource("3")

[connection signal="gui_input" from="Pivot" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Pivot" to="." method="_on_pivot_mouse_entered"]
[connection signal="mouse_exited" from="Pivot" to="." method="_on_pivot_mouse_exited"]
